--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mysql2": "^2.0.1",
+    "sequelize": "^5.21.2",
+    "sequelize-cli": "^5.5.1",
     "validator": "^12.1.0"
   }
 }
