--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Restful Registration Server",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "NodeJs",
     "ExpressJS",
     "SequelizeJS",
-    "JasmineJS",
+    "Jest",
     "Restful",
     "Web",
     "Service"
@@ -26,5 +26,8 @@
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
     "validator": "^12.1.0"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
